welcome.lessons.welcome.variables.Variables.scala.code
var x: Int = 0
while(!estSurBiscuit){
	avance();
	x = x + 1;
}
prendBuscuit();
while(x != 0){
	recule();
	x = x - 1;
}
